--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
        - name: test
          id: test
-         uses: steamclock/coda-changelog@test
+         uses: steamclock/coda-changelog@76be0dacb05c5d7523138c154736739ccc5e532d
          with:
            commits: github.event.commits
            milliseconds: 1000
