--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,5 +26,5 @@ jobs:
          id: test
          uses: steamclock/coda-changelog@76be0dacb05c5d7523138c154736739ccc5e532d
          with:
-           commits: ${{toJSON(github.event.commits)}}
+           commits: ${{toJSON(github.event)}}
            milliseconds: 1000
