--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,7 +11,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+     #${{toJSON(github.event)}}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
        - name: test
@@ -20,5 +20,5 @@ jobs:
          env:
           coda-token: ${{ secrets.CODA_TOKEN }}
          with:
-           commits: ${{github.event.commits}} #${{toJSON(github.event)}}
+           commits: ${{github.event.commits}}
            doc-id: 'p-_LNphf30'
