--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
          id: test
          uses: steamclock/coda-changelog@v2.0
          with:
-           commits: ${{ github.event.commits }}
+           commits: ${{ toJSON(github.event.commits) }}
            doc-id: 'p-_LNphf30'
          env:
           coda-token: ${{ secrets.CODA_TOKEN }}
