--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,4 +19,5 @@ jobs:
          with:
            commits: ${{ toJSON(github.event.commits) }}
            doc-id: 'p-_LNphf30'
+         env: 
            coda-token: ${{ secrets.CODA_TOKEN }}
