--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,3 +21,8 @@ jobs:
            doc-id: 'p-_LNphf30'
          env: 
            coda-token: ${{ secrets.CODA_TOKEN }}
+     
+       - name: token test
+         env: 
+          CODA_TOKEN: ${{ secrets.CODA_TOKEN }}
+         run: echo CODA_TOKEN
