--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,10 +20,8 @@ jobs:
            commits: ${{ toJSON(github.event.commits) }}
            coda-token: ${{ secrets.CODA_TOKEN }}
            doc-id: 'p-_LNphf30'
-         env: 
-           coda-token: ${{ secrets.CODA_TOKEN }}
      
        - name: token test
          env: 
           CODA_TOKEN: ${{ secrets.CODA_TOKEN }}
-         run: echo ${{ CODA_TOKEN }}
+         run: echo $CODA_TOKEN
