--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
        - name: Update Changelog
-         id: Update Changelog
+         id: update-changelog
          uses: steamclock/coda-changelog@v2.0
          with:
            commits: ${{ toJSON(github.event.commits) }}
