--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+       - run: npm install
+       - run: npm run build
        - name: Update Changelog
          id: update-changelog
          uses: steamclock/coda-changelog@v2.0
