--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,12 +13,16 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: Output the current branch name
-        run: echo running on branch ${GITHUB_REF##*/}
+        run: echo running on branch ${GITHUB_REF}
           
       - name: Extract branch name
+        run: echo "::set-output name=branch::$(echo ${GITHUB_REF#refs/heads/})"
         shell: bash
-        run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
         id: extract_branch
+        
+      - name: Echo Branch output
+        run: echo eng:${{ steps.extract_branch.outputs.branch }}
+        shell: bash
         
       - name: Update Changelog
         id: update-changelog
@@ -27,3 +31,4 @@ jobs:
           commits: ${{ toJSON(github.event.commits) }}
           coda-token: ${{ secrets.CODA_TOKEN }}
           doc-id: 'p-_LNphf30'
+          branch: eng:${{ steps.extract_branch.outputs.branch }}
