--- a/.github/workflows/testcommands.yml
+++ b/.github/workflows/testcommands.yml
@@ -25,18 +25,13 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJSON(github) }}
-        run: echo "$GITHUB_CONTEXT"
-      - name: Dump job context
-        env:
-          JOB_CONTEXT: ${{ toJSON(job) }}
-        run: echo "$JOB_CONTEXT"
+      - name: Dump GitHub commits since last tag
+        run: echo "git log v1.1.."
+
 
       # Runs a single command using the runners shell
       - name: Extract commits since last tag
-        run: echo "::set-output name=commits::${git log v1.1..})"
+        run: echo "::set-output name=commits::${ toJSON(git log v1.1..) })"
         shell: bash
         id: extract_commits
         
