--- a/.github/workflows/testcommands.yml
+++ b/.github/workflows/testcommands.yml
@@ -25,16 +25,18 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
       
-      - name: Dump GitHub commits since last tag
-        run: echo $(git log -n 10 )
-        #\ --pretty=format:'{"commit": "%H", "author": "%aN <%aE>", "date": "%ai", "message": """%B""", "notes": """%N""" },' \ $@ | awk 'BEGIN { print("[") } { print($0) } END { print("]") }' | python -u -c \
-   # 'import ast,json,sys; print(json.dumps(ast.literal_eval(sys.stdin.read())))')
-
-
+      - name: Get latest tag
+        id: latest_tag
+        run: echo "::set-output name=name::$(git tag --sort=-creatordate | head -1)"
+     # - name: "Get second latest tag"
+     #   id: second_latest_tag
+     #   run: echo "::set-output name=name::$(git tag --sort=-creatordate | head -2 | tail -1)"
       - name: Extract commits since last tag
-        run: echo "::set-output name=commits::$(echo $(git log -n 10))"
-        shell: bash
         id: extract_commits
+        run: echo "::set-output name=commits::$(echo $(git log ${{ steps.latest_tag.outputs.name }}.. --pretty=format:'- %s\n'"
+        
+     # - name: Dump GitHub commits since last tag
+     #   run: echo $(git log v1.. --pretty=format:'{"commit": "%H", "author": "%aN <%aE>", "date": "%ai", "message": """%B""", "notes": """%N""" },' $@  | awk 'BEGIN { print("[") } { print($0) } END { print("]") }' 'import ast,json,sys; print(json.dumps(ast.literal_eval(sys.stdin.read())))')
         
       - name: Run a one-line script
         run: echo ${{ steps.extract_commits.outputs.commits }}
