--- a/.github/workflows/testcommands.yml
+++ b/.github/workflows/testcommands.yml
@@ -32,8 +32,9 @@ jobs:
       - name: Extract commits since last tag
         id: extract_commits
         run: |
-          echo ::set-output name=commits::$(echo $(git log v1.1.. \ --pretty=format:'{"commit": "%H", "author": "%aN <%aE>", "date": "%ai", "message": """%B""", "notes": """%N""" },' \
-          $@  | awk 'BEGIN { print("[") } { print($0) } END { print("]") }' \
+          echo ::set-output name=commits::$(echo $(git log -n 10 \
+          --pretty=format:'{"commit": "%H", "author": "%aN <%aE>", "date": "%ai", "message": """%B""", "notes": """%N""" },' \
+            $@  | awk 'BEGIN { print("[") } { print($0) } END { print("]") }' | python -u -c \
           'import ast,json,sys; print(json.dumps(ast.literal_eval(sys.stdin.read())))')
 
       - name: Run a one-line script
