--- a/.github/workflows/testcommands.yml
+++ b/.github/workflows/testcommands.yml
@@ -33,7 +33,7 @@ jobs:
         id: extract_commits
         run: |
           echo "::set-output name=commits::$(echo $(git log -n 10 \
-              --pretty=format:'{%n  "commit": "%H",%n "body": "%b",%n  "message": "%s",%n  "author": {%n    "name": "%aN",%n    "email": "%aE",%n    "timestamp": "%aD"%n  },' \
+              --pretty=format:'{%n  "commit": "%H",%n "body": "%b",%n  "message": "%s",%n  "author": {%n    "name": "%aN",%n    "email": "%aE",%n    "timestamp": "%aD"%n  } %n},' \
               $@  | awk 'BEGIN { print("[") } { print($0) } END { print("]") }' | python -u -c \
               'import ast,json,sys; print(json.dumps(ast.literal_eval(sys.stdin.read())))'))"
       - name: Run a one-line script
