--- a/.github/workflows/testcommands.yml
+++ b/.github/workflows/testcommands.yml
@@ -27,13 +27,16 @@ jobs:
       
       - name: Get latest tag
         id: latest_tag
-        run: echo "::set-output name=name::$(git tag --sort=-creatordate | head -1)"
+        run: echo "::set-output name=name::$(git describe --abbrev=0)"
+        
+      - name: Print latest tag
+        run: echo ${{ steps.latest_tag.outputs.name }}
 
       - name: Extract commits since last tag
         id: extract_commits
         run: |
           echo "::set-output name=commits::$(echo $(git log -n 10 \
-              --pretty=format:'{%n  "commit": "%H",%n "body": "%b",%n  "message": "%s",%n  "author": {%n    "name": "%aN",%n    "email": "%aE",%n    "timestamp": "%aD"%n  } %n},' \
+              --pretty=format:'{%n  "commit": "%H",%n "body": "%b",%n  "message": "%s",%n    "timestamp": "%aD"%n,%n  "author": {%n    "name": "%aN",%n    "email": "%aE" } %n},' \
               $@  | awk 'BEGIN { print("[") } { print($0) } END { print("]") }' | python -u -c \
               'import ast,json,sys; print(json.dumps(ast.literal_eval(sys.stdin.read())))'))"
       - name: Run a one-line script
