--- a/.github/workflows/testcommands.yml
+++ b/.github/workflows/testcommands.yml
@@ -27,7 +27,7 @@ jobs:
       
       - name: Get latest tag
         id: latest_tag
-        run: echo "::set-output name=name::$(git describe --abbrev=0)"
+        run: echo "::set-output name=name::$(git describe --tags `git rev-list --tags --max-count=1`)"
         
       - name: Print latest tag
         run: echo ${{ steps.latest_tag.outputs.name }}
