--- a/.github/workflows/testcommands.yml
+++ b/.github/workflows/testcommands.yml
@@ -27,7 +27,7 @@ jobs:
       
       - name: Get latest tag
         id: latest_tag
-        run: echo "::set-output name=name::$(git describe --tags `git rev-list --tags --max-count=1`)"
+        run: echo "::set-output name=name::${GITHUB_REF##*/}"
         
       - name: Print latest tag
         run: echo ${{ steps.latest_tag.outputs.name }}
@@ -35,7 +35,7 @@ jobs:
       - name: Extract commits since last tag
         id: extract_commits
         run: |
-          echo "::set-output name=commits::$(echo $(git log -n 10 \
+          echo "::set-output name=commits::$(echo $(git log v2.0.. \
               --pretty=format:'{%n  "commit": "%H",%n "body": "%b",%n  "message": "%s",%n    "timestamp": "%aD"%n,%n  "author": {%n    "name": "%aN",%n    "email": "%aE" } %n},' \
               $@  | awk 'BEGIN { print("[") } { print($0) } END { print("]") }' | python -u -c \
               'import ast,json,sys; print(json.dumps(ast.literal_eval(sys.stdin.read())))'))"
