--- a/.github/workflows/testcommands.yml
+++ b/.github/workflows/testcommands.yml
@@ -27,7 +27,10 @@ jobs:
       
       - name: Get latest tag
         id: latest_tag
-        run: echo "::set-output name=name::${GITHUB_REF##*/}"
+        run: |
+          echo "::set-output name=name::${GITHUB_REF##*/}"
+          echo git tag --list
+          echo $(git tag --list)
         
       - name: Print latest tag
         run: echo ${{ steps.latest_tag.outputs.name }}
@@ -35,7 +38,7 @@ jobs:
       - name: Extract commits since last tag
         id: extract_commits
         run: |
-          echo "::set-output name=commits::$(echo $(git log v2.0.. \
+          echo "::set-output name=commits::$(echo $(git log v1.1.. \
               --pretty=format:'{%n  "commit": "%H",%n "body": "%b",%n  "message": "%s",%n    "timestamp": "%aD"%n,%n  "author": {%n    "name": "%aN",%n    "email": "%aE" } %n},' \
               $@  | awk 'BEGIN { print("[") } { print($0) } END { print("]") }' | python -u -c \
               'import ast,json,sys; print(json.dumps(ast.literal_eval(sys.stdin.read())))'))"
