--- a/.github/workflows/testcommands.yml
+++ b/.github/workflows/testcommands.yml
@@ -23,12 +23,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       
       - name: Get latest tag
         id: latest_tag
         run: |
-          echo "::set-output name=name::${GITHUB_REF}"
+          echo "::set-output name=name::$(git tag --sort=-creatordate | head -1)"
           git tag --list
         
       - name: Print latest tag
