--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,20 @@ jobs:
     steps:
       - name: Output the current branch name
         run: echo running on branch ${GITHUB_REF}
+        
+      - uses: actions/checkout@v1
+      
+      - name: Extract commits since last tag
+        id: extract_commits
+        run: |
+          echo "::set-output name=commits::$(echo $(git log v2.0.. \
+              --pretty=format:'{%n  "commit": "%H",%n "body": "%b",%n  "message": "%s",%n    "timestamp": "%aD"%n,%n  "author": {%n    "name": "%aN",%n    "email": "%aE" } %n},' \
+              $@  | awk 'BEGIN { print("[") } { print($0) } END { print("]") }' | python -u -c \
+              'import ast,json,sys; print(json.dumps(ast.literal_eval(sys.stdin.read())))'))"
+              
+      - name: Run a one-line script
+        run: echo ${{ steps.extract_commits.outputs.commits }}
+
           
       - name: Extract branch name
         run: echo "::set-output name=branch::$(echo ${GITHUB_REF#refs/heads/})"
@@ -28,7 +42,8 @@ jobs:
         id: update-changelog
         uses: steamclock/coda-changelog@v1
         with:
+          all-commits: ${{ steps.extract_commits.outputs.commits }}
           commits: ${{ toJSON(github.event.commits) }}
           coda-token: ${{ secrets.CODA_TOKEN }}
           doc-id: 'p-_LNphf30'
-          branch: eng:${{ steps.extract_branch.outputs.branch }}
+         # branch: eng:${{ steps.extract_branch.outputs.branch }}
