--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,4 +46,4 @@ jobs:
           commits: ${{ toJSON(github.event.commits) }}
           coda-token: ${{ secrets.CODA_TOKEN }}
           doc-id: 'p-_LNphf30'
-         # branch: eng:${{ steps.extract_branch.outputs.branch }}
+          branch: eng:${{ steps.extract_branch.outputs.branch }}
