Updated to use main
* Squashed test
* More squashed commits

--- a/.github/workflows/coda-changelog-final.yml
+++ b/.github/workflows/coda-changelog-final.yml
@@ -19,7 +19,7 @@ jobs:
         
       - name: Update Changelog  
         id: update-changelog
-        uses: steamclock/coda-changelog@v1
+        uses: steamclock/coda-changelog@main
         with:
           fromTag: 'v3.0'
           commits: ${{ toJSON(github.event.commits) }}
